fix: replace immutable list with mutable list in table.add()